--- a/web/app/ponthe/templates/email/create_account.html
+++ b/web/app/ponthe/templates/email/create_account.html
@@ -573,7 +573,8 @@
                                           Email : {{  email }}<br>
                                           Mot de passe : {{ password }}<br>
                                           <br>
-                                          Tu peux réinitialiser ton mot de passe en te rendant sur <a href="https://{{ reset_link }}" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">{{ reset_link }}</a>.
+                                          Tu peux réinitialiser ton mot de passe en te rendant sur :<br>
+                                          <a href="https://{{ reset_link }}" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">{{ reset_link }}</a>
                                       </p>
                                     </td>
                                   </tr>
@@ -624,6 +625,8 @@
                                     <td valign="top" class="mcnTextContent" style="padding-top: 0;padding-right: 18px;padding-bottom: 9px;padding-left: 18px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;word-break: break-word;color: #808080;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;">
                                       <p style="margin: 10px 0;padding: 0;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #808080;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: justify;">
                                         En cas de besoin, tu peux contacter le Ponthé par notre mailing list <a href="mailto:ponthe@liste.enpc.fr" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">ponthe@liste.enpc.fr</a>.<br>
+                                        En te connectant, tu acceptes tacitement les Conditions Générales d'Utilisation en ligne <a href="https://ponthe.enpc.org/cgu" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">ici</a>.<br>
+                                        <br>
                                         <img style="margin: 20px 140px; max-width: 500px;" src="https://ponthe.enpc.org/static/img/the_team/020.png">
                                       </p>
                                     </td>
