--- a/web/app/ponthe/templates/materiel.html
+++ b/web/app/ponthe/templates/materiel.html
@@ -5,7 +5,6 @@
 <div id="content">
     <div class="container background-white">
         <div class="row margin-vert-30">
-            <!-- Main Column -->
             <div class="col-md-9">
                 <div class="headline">
                     <h2>Réserver du matériel</h2>
@@ -46,17 +45,16 @@
                 </form>
             </div>
             <div class="col-md-3">
-                <!-- Recent Posts -->
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Contact Info</h3>
+                        <h3 class="panel-title">Contact</h3>
                     </div>
                     <div class="panel-body">
                         <p>
                             Pour des questions supplémentaires sur le club ou la réservation de matériel, vous pouvez contacter les membres du club Ponthé
                         </p>
                         <li>
-                            <i class="fa-envelope color-primary"></i>ponthe@liste.enpc.fr
+                            <i class="fa-envelope color-primary"></i><a href="mailto:ponthe@liste.enpc.fr">ponthe@liste.enpc.fr</a>
                         </li>
                     </div>
                 </div>
