--- a/web/app/ponthe/templates/resetting.html
+++ b/web/app/ponthe/templates/resetting.html
@@ -5,14 +5,11 @@
 <div id="content">
     <div class="container background-white">
         <div class="row margin-vert-30">
-            <!-- Main Column -->
             <div class="col-md-9">
-                <!-- Main Content -->
                 <div class="headline">
                     <h2>Coucou {{ firstname }} !</h2>
                 </div>
                 <br>
-                <!-- Contact Form -->
                 <form action="" method="post">
                     <label>Nouveau mot de passe</label>
                     <div class="row margin-bottom-20">
@@ -44,28 +41,23 @@
                         <button type="submit" class="btn btn-primary" value="Envoyer">Réinitialiser</button>
                     </p>
                 </form>
-                <!-- End Contact Form -->
-                <!-- End Main Content -->
             </div>
-            <!-- End Main Column -->
-            <!-- Side Column -->
             <div class="col-md-3">
                 <!-- Recent Posts -->
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Contact Info</h3>
+                        <h3 class="panel-title">Contact</h3>
                     </div>
                     <div class="panel-body">
                         <p>
                             Pour des questions supplémentaires sur le club ou la réservation de matériel, vous pouvez contacter les membres du club Ponthé avec les informations ci-jointes
                         </p>
                         <li>
-                            <i class="fa-envelope color-primary"></i>ponthe@liste.enpc.fr
+                            <i class="fa-envelope color-primary"></i><a href="mailto:ponthe@liste.enpc.fr">ponthe@liste.enpc.fr</a>
                         </li>
                     </div>
                 </div>
             </div>
-            <!-- End recent Posts -->
         </div>
     </div>
 </div>
