unmatching case on extensions

--- a/web/app/ponthe/templates/cgu.html
+++ b/web/app/ponthe/templates/cgu.html
@@ -35,7 +35,7 @@
                     Identifiant et mot de passe : c'est l'ensemble des informations nécessaires à l'identification d'un Utilisateur sur le site. L'identifiant et le mot de passe permettent à l'Utilisateur d'accéder à des services réservés aux membres du site. Le mot de passe est confidentiel.
                 </p>
 
-                <h2>ARTICLE 4 : accès aux services</h2>
+                <h2>ARTICLE 4 : Accès aux services</h2>
                 <p>
                     Le site permet à l'Utilisateur un accès gratuit aux services suivants :
                 </p>
