--- a/web/app/ponthe/templates/category_gallery.html
+++ b/web/app/ponthe/templates/category_gallery.html
@@ -19,7 +19,7 @@
                         <div>
                             <a href="{{ url_for('private.event_gallery', event_slug=event.slug) }}">
                                 <figure>
-                                    <img src="{{ url_for('uploads', file_path=event.cover.file_path) }}">
+                                    <img src="{{ event.cover | thumb }}">
                                     <figcaption>
                                         <h3 class="margin-top-20">{{ event.name }}</h3>
                                     </figcaption>
