--- a/web/app/ponthe/templates/year_gallery.html
+++ b/web/app/ponthe/templates/year_gallery.html
@@ -49,7 +49,7 @@
                         <div>
                             <a href="{{ url_for('private.gallery', gallery_slug=gallery.slug) }}">
                                 <figure>
-                                    <img src="{{ url_for('uploads', file_path=gallery.cover.file_path) }}">
+                                    <img src="{{ gallery.cover | thumb }}">
                                     <figcaption>
                                         <h3 class="margin-top-20">{{ gallery.name }}</h3>
                                     </figcaption>
