--- a/web/app/ponthe/templates/dashboard.html
+++ b/web/app/ponthe/templates/dashboard.html
@@ -63,6 +63,9 @@
                                         </a>
                                     </figure>
                                 </div>
+                                <div class="no-border">
+                                    <button class="btn btn-danger margin-vert-20" type="button" data-toggle="modal" data-target="#deleteModal">Supprimer</button>
+                                </div>
                             </div>
                         {% endfor %}
                     </div>
@@ -89,13 +92,16 @@
             <div class="row">
                 <div class="col-md-12 portfolio-group no-padding">
                     {% for file in files %}
-                        <div class="col-md-3 portfolio-item margin-bottom-40 design">
+                        <div class="col-md-3 portfolio-item margin-bottom-40 design no-border">
                             <div>
                                 <figure>
                                     <a href="{{ url_for('uploads', file_path=file.file_path) }}">
                                         <img src="{{ url_for('uploads', file_path=file.file_path) }}">
                                     </a>
                                 </figure>
+                            </div>
+                            <div>
+                                <button class="btn btn-danger margin-vert-20" type="button" data-toggle="modal" data-target="#deleteModal">Supprimer</button>
                             </div>
                         </div>
                     {% endfor %}
